--- a/app/src/main/res/layout/activity_listas.xml
+++ b/app/src/main/res/layout/activity_listas.xml
@@ -15,11 +15,10 @@
         android:layout_marginStart="84dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="38dp"
         android:onClick="abrir_add_lista"
         android:text="Adicionar Lista"
-        app:layout_constraintBottom_toTopOf="@+id/recycler"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,29 +26,28 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="38dp"
         android:onClick="abrir_perfil"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/recycler"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="425dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="15dp"
         android:background="#CACACA"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/AdicionarLista" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
