Funcionalidades: compartilhar/convite, aparencia melhorada

--- a/app/src/main/res/layout/activity_listas.xml
+++ b/app/src/main/res/layout/activity_listas.xml
@@ -8,46 +8,50 @@
     android:orientation="vertical"
     tools:context=".ListasActivity">
 
-    <Button
-        android:id="@+id/AdicionarLista"
+
+    <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="24dp"
-        android:onClick="abrir_add_lista"
-        android:text="Adicionar Lista"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:alpha="0.55"
+        android:background="#75FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/f" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="38dp"
-        android:onClick="abrir_perfil"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/recycler"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="121dp"
+        android:background="#FF7214"
+        android:elevation="4dp"
+        android:onClick="voltar_inicio"
+        android:text="Voltar ao inicio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
-        android:background="#CACACA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AdicionarLista" />
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+    />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
