--- a/app/src/main/res/layout/activity_add_lista.xml
+++ b/app/src/main/res/layout/activity_add_lista.xml
@@ -65,7 +65,7 @@
         android:layout_marginStart="137dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="137dp"
-        android:text="Criar lista de compras"
+        android:text="Crie a lista do que levará"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
