--- a/app/src/main/res/layout/activity_listas.xml
+++ b/app/src/main/res/layout/activity_listas.xml
@@ -17,12 +17,14 @@
         android:layout_marginBottom="8dp"
         android:alpha="0.55"
         android:background="#75FFFFFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/f" />
+        app:srcCompat="@drawable/f"
+        tools:visibility="gone" />
 
     <Button
         android:id="@+id/button3"
@@ -36,16 +38,15 @@
         android:onClick="voltar_inicio"
         android:text="Voltar ao inicio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
