--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -66,7 +66,7 @@
                 android:layout_marginHorizontal="6dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="6dp"
-                android:text="SobrenomeEx"
+                android:text="Itens"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </LinearLayout>
